# buaa_rescue_robot

./: .gitignore  README.md
documents/: .~lock.485通讯变送计数器%2C计米器说明书-新壳.doc#  .~lock.编码器反馈值（3770版本+64位）.docx#  MOTOR_COMMAND.md  Modbus RTU协议(V2.0).doc  编码器反馈值（3770版本+64位）.docx
documents/omege-7/: .~lock.omega7.docx#  omega7.docx
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/: Makefile  Makefile.common
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/doc/dhd/: deprecated.html  dhd_glossary.html  dhdc_8h.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  examples.html  files.html  globals.html  globals_c.html  globals_d.html  globals_defs.html  globals_e.html  globals_enum.html  globals_eval.html  globals_func.html  globals_g.html  globals_h.html  globals_i.html  globals_j.html  globals_k.html  globals_o.html  globals_p.html  globals_r.html  globals_s.html  globals_u.html  globals_w.html  hello_world_8cpp-example.html  index.html  multiple_devices_8cpp-example.html  pages.html  single_device_8cpp-example.html  stylesheet.css
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/doc/drd/: deprecated.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  drd_glossary.html  drdc_8h.html  files.html  globals.html  globals_func.html  index.html  pages.html
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/doc/licenses/: license.txt
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/: Makefile
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/autocenter/: autocenter.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/autoinit/: autoinit.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/center/: Makefile.project  center.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/encoders/: Makefile  encoders.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/gravity/: gravity.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/jacobian/: jacobian.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/mirror/: mirror.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/multithread/: multithread.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/robot/: robot.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/segment/: segment.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/sensor/: sensor.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/viscosity/: viscosity.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/CLI/wrist/: wrist.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/: Makefile
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/constraints/: constraints.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/sphere/: CMacrosGL.h  sphere.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/torques/: Makefile.project  torques.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/torus/: torus.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/examples/GLFW/transformations/: Makefile.project  Makefile.project.lin  transformations.cpp
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/extensions/Java/: run-example-gravity.sh  run-example-robot.sh
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/extensions/Java/doc/: allclasses-index.html  allclasses.html  allpackages-index.html  constant-values.html  deprecated-list.html  element-list  help-doc.html  index-all.html  index.html  member-search-index.js  overview-tree.html  package-search-index.js  type-search-index.js
documents/omege-7/sdk-3.14.0-linux-x86_64-gcc/sdk-3.14.0/extensions/Java/doc/com/forcedimension/sdk/: DHD.html  DRD.html  (+2 more)
documents/pull_push_force_sensors/: modbus-RTU指令归档.xls
install/: local_setup.sh  setup.sh
install/cpp_pubsub/lib/cpp_pubsub/: listener  talker
install/cpp_pubsub/share/ament_index/resource_index/parent_prefix_path/: cpp_pubsub
install/cpp_pubsub/share/cpp_pubsub/: local_setup.sh  package.sh
install/serial/lib/serial/: serial_receiver  serial_sender
install/serial/share/serial/: package.sh
log/: latest_build
src/buaa_rescue_robot_gui/: CMakeLists.txt  package.xml
src/buaa_rescue_robot_gui/src/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/buaa_rescue_robot_msgs/: CMakeLists.txt  package.xml
src/buaa_rescue_robot_msgs/launch/: control_by_keyboard.launch.py  elevator_control_by_keyboard.launch.py
src/buaa_rescue_robot_msgs/log/: latest_build
src/buaa_rescue_robot_msgs/msg/: ControlMessage.msg  ControlMessageMaster.msg  ControlMessageSlave.msg  ControlMessageSlaveGripper.msg  SensorsMessage.msg  SensorsMessageMasterDeviceElevator.msg  SensorsMessageMasterDevicePullPushSensors.msg  SensorsMessageRobomaster.msg  SensorsMessageRobomaster1.msg
src/controller/: CMakeLists.txt  package.xml
src/controller/src/: auto_controller.cpp  auto_controller_1.cpp  auto_controller_2.cpp  keyboard_publisher.cpp
src/cpp_pubsub/: CMakeLists.txt  README.md  package.xml
src/cpp_pubsub/msg/: ControlMessage.msg
src/cpp_pubsub/src/: listener.cpp  talker.cpp
src/keyboard_controller/: CMakeLists.txt  package.xml
src/keyboard_controller/msg/: ControlMessage.msg
src/keyboard_controller/src/: keyboard_publisher.cpp
src/omega7_sensor/: CMakeLists.txt  package.xml
src/omega7_sensor/include/omega7_sensor/: dhdc.h  drdc.h
src/omega7_sensor/lib/: libdhd.so.3  libdrd.so.3
src/omega7_sensor/src/: omega7_sensor.cpp  omega7_sub.cpp
src/serial/: CMakeLists.txt  README.md  package.xml
src/serial/src/: serial_PullPushSensors_1.cpp  serial_PullPushSensors_2.cpp  serial_master_devices.cpp  serial_pull_push_sensors_1.cpp  serial_receiver.cpp  serial_robomaster_1.cpp  serial_robomaster_2.cpp  serial_sender.cpp
(+2 files in other folders)
