<?xml version="1.0"?>
<package format="3">
  <name>controller</name>
  <version>0.0.1</version>
  <description>A package for robot control</description>

  <maintainer email="sy1607511@buaa.edu.cn">Huang Hao</maintainer>

  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>buaa_rescue_robot_msgs</depend>

  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
